Fix firefox layout issue.

--- a/src/main/webapp/schema.css
+++ b/src/main/webapp/schema.css
@@ -28,7 +28,7 @@
 }
 
 #topContent {
-	padding: 10px;
+	padding: 8px;
 	z-index: 2;
 	float: left;
 }
